# writing-agent

./: .gitignore  PROTOCOL_VERSION  README.md  pyproject.toml  requirements.txt  setup.sh
src/writing_agent/: cli.py  compiler.py  generator.py  validator.py  writer.py
tests/: conftest.py  test_compile.py  test_generate.py
tests/examples/: StoryPrompt.golden.json  StoryPrompt.minimal.json  StoryPrompt.minimal.story
tests/stubs/: world_engine_fail.sh  world_engine_pass.sh
